src/patternfly/components/DataList/data-list.scss
/* ... */
.#{$data-list}__item-row {
  display: flex;
  flex-wrap: nowrap;
  padding-inline-start: var(--#{$data-list}__item-row--PaddingInlineStart);
  padding-inline-end: var(--#{$data-list}__item-row--PaddingInlineEnd);
}

.#{$data-list}__item-control {
  display: flex;
  flex-wrap: nowrap;
  padding-block-start: var(--#{$data-list}__item-control--PaddingBlockStart);
  padding-block-end: var(--#{$data-list}__item-control--PaddingBlockEnd);
  margin-inline-end: var(--#{$data-list}__item-control--MarginInlineEnd);

  > *:not(:last-child) {
    margin-inline-end: var(--#{$data-list}__item-control--not-last-child--MarginInlineEnd);
  }
}

.#{$data-list}__check {
  display: flex;
  align-items: center;
  align-self: flex-start;
  height: var(--#{$data-list}__check--Height);
  margin-block-start: var(--#{$data-list}__check--MarginBlockStart);

  > input {
    cursor: pointer;
  }
}

.#{$data-list}__item-draggable-button {
  display: flex;
  flex-direction: column; // fixes safari alignment
  padding-block-start: var(--#{$data-list}__item-draggable-button--PaddingBlockStart);
  padding-block-end: var(--#{$data-list}__item-draggable-button--PaddingBlockEnd);
  padding-inline-start: var(--#{$data-list}__item-draggable-button--PaddingInlineStart);
  padding-inline-end: var(--#{$data-list}__item-draggable-button--PaddingInlineEnd);
  margin-block-start: var(--#{$data-list}__item-draggable-button--MarginBlockStart);
  margin-block-end: var(--#{$data-list}__item-draggable-button--MarginBlockEnd);
  margin-inline-start: var(--#{$data-list}__item-draggable-button--MarginInlineStart);
  background-color: var(--#{$data-list}__item-draggable-button--BackgroundColor);
  border: 0;

  &:hover {
    --#{$data-list}__item-draggable-button-icon--Color: var(--#{$data-list}__item-draggable-button--hover__draggable-icon--Color);

    cursor: grab;
  }

  &:focus {
    --#{$data-list}__item-draggable-button-icon--Color: var(--#{$data-list}__item-draggable-button--focus__draggable-icon--Color);
  }

  &:active {
    cursor: grabbing;
  }

  &.pf-m-disabled {
    --#{$data-list}__item-draggable-button-icon--Color: var(--#{$data-list}__item-draggable-button--m-disabled__draggable-icon--Color);

    pointer-events: none;
  }

  .#{$data-list}__item-draggable-icon {
    color: var(--#{$data-list}__item-draggable-button-icon--Color);
  }
}

.#{$data-list}__item-action {
  @include pf-v6-hidden-visible(var(--#{$data-list}__item-action--Display));

  gap: var(--#{$data-list}__item-action--Gap);
  align-content: flex-start;
  align-items: flex-start;
  padding-block-start: calc(var(--#{$data-list}__item-action--PaddingBlockStart) - var(--#{$data-list}__item-action--PaddingBlockStart--offset));
  padding-block-end: calc(var(--#{$data-list}__item-action--PaddingBlockEnd) - var(--#{$data-list}__item-action--PaddingBlockEnd--offset));
  margin-inline-start: var(--#{$data-list}__item-action--MarginInlineStart);
}

// toggle
.#{$data-list}__toggle {
  margin-block-start: var(--#{$data-list}__toggle--MarginBlockStart);
  margin-block-end: var(--#{$data-list}__toggle--MarginBlockEnd);
  margin-inline-start: var(--#{$data-list}__toggle--MarginInlineStart);
}

// toggle icon rotate
.#{$data-list}__toggle-icon {
  @include pf-v6-mirror-inline-on-rtl;

  height: var(--#{$data-list}__toggle-icon--Height);
  pointer-events: none;
  transition: var(--#{$data-list}__toggle-icon--Transition); // TODO remove shorthand in breaking change
  transform: rotate(var(--#{$data-list}__toggle-icon--Rotate));
}

.#{$data-list}__item-content {
  display: grid;
  grid-template-columns: auto 1fr;
  width: 100%;
}

// content cells
.#{$data-list}__cell {
  flex: 1;
  grid-column: 1 / -1;
  padding-block-start: var(--#{$data-list}__cell--PaddingBlockStart);
  padding-block-end: var(--#{$data-list}__cell--PaddingBlockEnd);

  // for all subsequent .#{$data-list}__cell's, set to full width
  & + & {
    flex: 1 0 100%;
    order: 1;
    padding-block-start: var(--#{$data-list}__cell--cell--PaddingBlockStart);
  }

  &.pf-m-icon {
    flex-grow: 0;
    grid-column: 1 / 2;
    margin-inline-end: var(--#{$data-list}__cell--m-icon--MarginInlineEnd);
  }

  &.pf-m-icon + & {
    grid-column: 2 / 3;
    padding-block-start: var(--#{$data-list}__cell--m-icon--cell--PaddingBlockStart);
  }

  &.pf-m-align-right {
    margin-inline-start: 0;
  }
}

// data list text
.#{$data-list}__text {
  display: inline-block;
}

.#{$data-list}__text,
.#{$data-list}__cell {
  min-width: var(--#{$data-list}--cell--MinWidth);
  max-width: 100%;
  overflow: var(--#{$data-list}--cell--Overflow);
  text-overflow: var(--#{$data-list}--cell--TextOverflow);
  word-break: var(--#{$data-list}--cell--WordBreak);
  white-space: var(--#{$data-list}--cell--WhiteSpace);
}
/* ... */

